Migrate collect(toList()) to toList()